Fixing Bugs within Sign-Up-And-Sign-Out-Page > Sign-Up component, Problem with the alignment and size of the components as shown in the course - TOR

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -1,4 +1,4 @@
-.signup {
+.sign-up {
     display: flex;
     flex-direction: column;
     width: 380px;
